corrected style.css to fix the title of the primary app which overflowed to top so changed position from absolute to relative

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,7 +213,7 @@ h1 {
   }
 
   .bottomright  {
-    position: absolute;
+    position: relative;
     bottom: 50px;
     left: 500px;
     font-size: 28px;
